--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,4 @@
 services:
-#  backend:
-#    build: .
-#    image: new_python
-#    depends_on:
-#      - minio
   minio:
     image: minio/minio:latest
     ports:
@@ -19,16 +14,18 @@ services:
     image: redis/redis-stack
     ports:
       - "6379:6379"
- rabbitmq:
+
+  rabbitmq:
     image: rabbitmq:3.8-management
     container_name: 'rabbitmq'
     ports:
-        - 5672:5672
-        - 15672:15672
+      - 5672:5672
+      - 15672:15672
     environment:
       - RABBITMQ_DEFAULT_USER=payments
       - RABBITMQ_DEFAULT_PASS=hackme
       - RABBITMQ_DEFAULT_VHOST=default_host
+
 
 
 
@@ -37,37 +34,37 @@ services:
 #    image: new_python
 #    depends_on:
 #      - rabbitmq
-#  postgres:
-#    image: postgres:11.0-alpine
-#    environment:
-#      POSTGRES_DB: "test_aiohttp"
-#      POSTGRES_USER: "postgres"
-#      POSTGRES_PASSWORD: "masterkey"
-#      POSTGRES_HOST: "postgres"
-#      POSTGRES_PORT: "5432"
-#    ports:
-#      - '5432:5432'
-#  mongo:
-#    image: mongo:5.0
-#    container_name: mongo
-#    environment:
-#      - MONGO_INITDB_ROOT_USERNAME=root
-#      - MONGO_INITDB_ROOT_PASSWORD=password
-#    restart: unless-stopped
-#    ports:
-#      - "27017:27017"
-#  mongo-express:
-#      image: mongo-express
-#      container_name: mexpress
-#      environment:
-#        - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-#        - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-#        - ME_CONFIG_MONGODB_URL=mongodb://root:password@mongo:27017/?authSource=admin
-#        - ME_CONFIG_BASICAUTH_USERNAME=mexpress
-#        - ME_CONFIG_BASICAUTH_PASSWORD=mexpress
-#      links:
-#        - mongo
-#      restart: unless-stopped
-#      ports:
-#        - "8081:8081"
+  postgres:
+    image: postgres:11.0-alpine
+    environment:
+      POSTGRES_DB: "test_aiohttp"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "masterkey"
+      POSTGRES_HOST: "postgres"
+      POSTGRES_PORT: "5432"
+    ports:
+      - '5432:5432'
+  mongo:
+    image: mongo:5.0
+    container_name: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+  mongo-express:
+      image: mongo-express
+      container_name: mexpress
+      environment:
+        - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+        - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+        - ME_CONFIG_MONGODB_URL=mongodb://root:password@mongo:27017/?authSource=admin
+        - ME_CONFIG_BASICAUTH_USERNAME=mexpress
+        - ME_CONFIG_BASICAUTH_PASSWORD=mexpress
+      links:
+        - mongo
+      restart: unless-stopped
+      ports:
+        - "8081:8081"
   
