--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,10 @@ services:
       MINIO_HTTP_TRACE: /tmp/minio
       DSN_MINIO: http://127.0.0.1:9000
     command: [ "server", "--console-address", ":9001", "/data" ]
-  brocker:
-    image: redis/redis-stack
-    ports:
-      - "6379:6379"
+#  brocker:
+#    image: redis/redis-stack
+#    ports:
+#      - "6379:6379"
 
   rabbitmq:
     image: rabbitmq:3.8-management
@@ -21,10 +21,7 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
-    environment:
-      - RABBITMQ_DEFAULT_USER=payments
-      - RABBITMQ_DEFAULT_PASS=hackme
-      - RABBITMQ_DEFAULT_VHOST=default_host
+
 
 
 
@@ -34,37 +31,37 @@ services:
 #    image: new_python
 #    depends_on:
 #      - rabbitmq
-  postgres:
-    image: postgres:11.0-alpine
-    environment:
-      POSTGRES_DB: "test_aiohttp"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "masterkey"
-      POSTGRES_HOST: "postgres"
-      POSTGRES_PORT: "5432"
-    ports:
-      - '5432:5432'
-  mongo:
-    image: mongo:5.0
-    container_name: mongo
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=password
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-  mongo-express:
-      image: mongo-express
-      container_name: mexpress
-      environment:
-        - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-        - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-        - ME_CONFIG_MONGODB_URL=mongodb://root:password@mongo:27017/?authSource=admin
-        - ME_CONFIG_BASICAUTH_USERNAME=mexpress
-        - ME_CONFIG_BASICAUTH_PASSWORD=mexpress
-      links:
-        - mongo
-      restart: unless-stopped
-      ports:
-        - "8081:8081"
+#  postgres:
+#    image: postgres:11.0-alpine
+#    environment:
+#      POSTGRES_DB: "test_aiohttp"
+#      POSTGRES_USER: "postgres"
+#      POSTGRES_PASSWORD: "masterkey"
+#      POSTGRES_HOST: "postgres"
+#      POSTGRES_PORT: "5432"
+#    ports:
+#      - '5432:5432'
+#  mongo:
+#    image: mongo:5.0
+#    container_name: mongo
+#    environment:
+#      - MONGO_INITDB_ROOT_USERNAME=root
+#      - MONGO_INITDB_ROOT_PASSWORD=password
+#    restart: unless-stopped
+#    ports:
+#      - "27017:27017"
+#  mongo-express:
+#      image: mongo-express
+#      container_name: mexpress
+#      environment:
+#        - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+#        - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+#        - ME_CONFIG_MONGODB_URL=mongodb://root:password@mongo:27017/?authSource=admin
+#        - ME_CONFIG_BASICAUTH_USERNAME=mexpress
+#        - ME_CONFIG_BASICAUTH_PASSWORD=mexpress
+#      links:
+#        - mongo
+#      restart: unless-stopped
+#      ports:
+#        - "8081:8081"
   
