--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ POSTGRES_PORT='5432'
 POSTGRES_DSN='postgres://postgres:masterkey@localhost:5432/test_aiohttp'
 RABBITMQ_DEFAULT_USER="payments"
 RABBITMQ_DEFAULT_PASS="hackme"
-RABBITMQ_DSN="http://127.0.0.1:5672"
+RABBITMQ_DSN='amqp://payments:hackme@127.0.0.1:5672'
